[package]
name = "orca_whirlpools_client_integration_anchor_v0_30"
edition = "2021"

[lib]
path = "../../lib.rs"

[dependencies]
anchor-lang = {git ="https://github.com/coral-xyz/anchor",branch = "master" }
solana-program = { version = "2.1.0" }
orca_whirlpools_client = { path = "../../../client", features = ["anchor"] }
